--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -399,3 +399,8 @@
   font-size: $type-size-6;
   text-transform: uppercase;
 }
+
+.scrollable {
+    height: 100px; /* or any value */
+    overflow-y: auto;
+}
