--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,28 @@ layout: compress
 <!doctype html>
 <html lang="{{ site.locale | slice: 0,2 }}" class="no-js">
   <head>
+        <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Reference List</title>
+    <style>
+        ol.references {
+            counter-reset: list-counter; /* Initialize a custom counter */
+            padding-left: 0;
+        }
+        ol.references li {
+            counter-increment: list-counter; /* Increment the counter for each item */
+            list-style: none; /* Remove default list styling */
+            margin-bottom: 10px;
+            padding-left: -10px;
+            text-indent: -10px;
+        }
+        ol.references li::before {
+            content: "[" counter(list-counter) "] "; /* Automatically add brackets around the counter */
+            /*font-weight: bold;*/
+            padding-right: 10px;
+            padding-left: 10px;
+        }
+    </style>
     {% include head.html %}
     {% include head/custom.html %}
   </head>
